js file is added

--- a/student-details.html
+++ b/student-details.html
@@ -49,13 +49,18 @@ tr:nth-child(even) {
                     <th>Roll</th>
                     <th>Class</th>
                     <th>Domain</th>
-                    <th>Action</th>
                 </tr>
             </thead>
             <tbody id="studentTableBody">
             </tbody>
         </table>
+     <a href="Student-table.html"><button>Click here to add another entry</button> </a>
     </div>
+    <script src="script.js"></script>
+    <script>
+        displayFormData();
+    </script>
+   
     
 </body>
 </html>
