--- a/student-details.html
+++ b/student-details.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>student-details</title>
-    <style>
+    <link rel="stylesheet" href="/assets/css/app-dark.min.css">
+    <link rel="stylesheet" href="/assets/css/app-rtl.min.css">
+    <link rel="stylesheet" href="/assets/css/app.min.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/icons.min.css">
+    <!--<style>
         .container {
             max-width: 900px;
             margin: 50px auto;
@@ -37,24 +42,15 @@ th {
 tr:nth-child(even) {
     background-color: #f2f2f2;
 }
-    </style>
+    </style>-->
 </head>
 <body>
     <div class="container">
-        <p>Student Details</p>
-        <table id="studentTable">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Roll</th>
-                    <th>Class</th>
-                    <th>Domain</th>
-                </tr>
-            </thead>
-            <tbody id="studentTableBody">
-            </tbody>
-        </table>
-     <a href="Student-table.html"><button>Click here to add another entry</button> </a>
+        <div class="table">
+            <table>
+                
+            </table>
+        </div>
     </div>
     <script src="script.js"></script>
     <script>
